<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014-2017 Carmen Alvarez
 
  This file is part of Pálida Muerte.
 
  Pálida Muerte is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
 
  Pálida Muerte is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Pálida Muerte. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Poemas</string>
    <string name="loading">Cargando&#8230;</string>
    <string name="page_number">%1$d de %2$d</string>
    <string name="poem_type_and_number">%1$s n°%2$d</string>
    <string name="action_prev">Anterior</string>
    <string name="action_next">Siguiente</string>
    <string name="action_favorite_normal">Añadir a favoritos</string>
    <string name="action_favorite_activated">Eliminar de favoritos</string>
    <string name="action_about">Acerca de</string>
    <string name="action_share">Compartir</string>
    <string name="action_music_off">Apagar la música</string>
    <string name="action_music_on">Encender la música</string>
    <string name="action_print">Imprimir</string>
    <string name="action_search">Buscar</string>
    <string name="search_hint">Términos de búsqueda</string>
    <string name="search_results">Resultados de búsqueda</string>
    <string name="empty_favorite_list_title">Ningún poema en los favoritos</string>
    <string name="empty_favorite_list_description1">Puntee en el icono corazón</string>
    <string name="empty_favorite_list_description2">en la parte inferior de un poema para añadirlo a los favoritos.</string>
    <string name="empty_search_list_title">Ningún poema</string>

    <plurals name="empty_search_list_description">
        <item quantity="one">No se ha encontrado ningún poema conteniendo la palabra \'%s\'.</item>
        <item quantity="other">No se ha encontrado ningún poema conteniendo las palabras \'%s\'.</item>
    </plurals>

    <string name="copyright">Copyright &#169; Francisco Alvarez Hidalgo</string>
    <string name="author">Francisco Alvarez Hidalgo</string>
    <string name="subtitle">Poemas de Francisco Alvarez Hidalgo</string>
    <string name="about">Acerca de</string>
    <string name="author_date">1935 &#8211; 2014</string>
    <string name="author_description">Nacido en Cantabria, España, poeta de estilo clásico, autor de más de 8000 poemas, entre ellos 3600 sonetos.\n\nhttp://poesiadelmomento.com</string>
    <string name="current_song">\u266c Canción actual: %1$s - %2$s \u266c</string>
    <string name="app_name_and_version">%1$s versión %2$s</string>
    <string name="credits_app">Aplicación programada por Carmen Alvarez (hija de Francisco): c@rmen.ca</string>

    <string name="print_preview_html" translatable="false">
<![CDATA[
<html>
 <head>
  <meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>
  <style type="text/css">
  @font-face {
    font-family: "dancing_script";
    src: url("file:///android_asset/dancing_script.ttf");
  }
  @page  {
    margin: 25mm 25mm 25mm 25mm;
  }
  body {
    white-space: pre-wrap;
    font-size: 12pt;
  }
  .container {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    position: relative;
  }
  .poem-title {
    font-size: 24pt;
    font-family: "dancing_script";
  }
  .poem-pre-content {
    opacity: 0.5;
    font-size: 10pt;
  }
  .poem-container {
    float: left;
    position: relative;
    left: 50%%;
  }
  .poem-text {
    float: left;
    position: relative;
    left: -50%%;
    text-align: left;
    white-space: pre-wrap;
  }
  .poem-number {
    opacity: 0.7;
    font-size: 10pt;
    font-style: italic;
  }
  .poem-author {
    font-size: 10pt;
  }
  .clear-floats {
    clear: both;
  }
  </style>
 </head>
 <body>
  <div class="container">
  <div class="poem-title">%1$s</div>
  <br>
  <div class="poem-pre-content">%2$s</div>
  <br>
  <div class="poem-container">
   <div class="poem-text">%3$s</div>
  </div>
  <div class="clear-floats"><br><br></div>
  <div class="poem-number">%4$s</div>
  <br>
  <div class="poem-author">Francisco Álvarez Hidalgo<br>%5$s</div>
 </div>
 </body>
</html>
]]>
    </string>
</resources>