<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_music"
        android:icon="@drawable/ic_action_music_on"
        app:showAsAction="ifRoom"
        android:title="@string/action_music_on"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="ifRoom"
        android:orderInCategory="1000"
        android:title="@string/action_about"/>

    <item
        android:id="@+id/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search"/>

</menu>